<resources>
    <string name="app_name">SodaPop</string>
    <string name="description_app">De la teva nevera a la teva taula amb un click</string>
    <string name="invitado">Començar com a invitat</string>
    <string name="usuari">Ja tens usuari?</string>
    <string name="inicia_sessio">Inicia sessió</string>
    <string name="compte">Vols crear un compte?</string>
    <string name="registrat">Registra\'t</string>
    <string name="nom">Nom</string>
    <string name="cognoms">Cognoms</string>
    <string name="correo_electronic">Correu electrònic</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="repeteix_contrasenya">Repeteix contrasenya</string>
    <string name="crear_compte">Crear compte</string>
    <string name="hola_nom">Hola, Nom!</string>
    <string name="buscador">Buscador</string>
    <string name="receptes_recomanades">Receptes recomanades</string>
    <string name="filtrar">Filtrar</string>
    <string name="tiempo">1h</string>
    <string name="nom_recepta">Nombre de la receta</string>
    <string name="escriu_ingredients">Escriu el nom dels ingredients</string>
    <string name="buscar_receptes">Buscar receptes</string>
    <string name="ingredientes_seleccionados">Ingredients seleccionats</string>
    <string name="ingredientes">Ingredients:</string>
    <string name="passes">Passes:</string>
    <string name="ingrediente1">ingrediente1</string>
    <string name="passo1">Passo1</string>
    <string name="rebost">Rebost</string>
    <string name="introduir_aliments">Introduir aliments</string>
    <string name="data_de_caducitat">Data de caducitat</string>
    <string name="quantitat">Quantitat</string>
    <string name="aceptar">Aceptar</string>
    <string name="taula_d_aliments">Taula d\'aliments</string>
    <string name="data">Data</string>
    <string name="boton_parar_volver_atras" />
    <string name="meves_receptes" />
    <string name="icono_de_favoritos" />
    <string name="icono_del_tiempo" />
    <string name="logo" />
    <string name="tornar_enrere" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrediente2">Ingrediente 2</string>
    <string name="filtra_al_teu_gust">Filtra al teu gust</string>
    <string name="iniciar">Iniciar</string>
    <string name="ultim_pas">Un últim pas</string>
    <string name="finalitzar">Finalitzar</string>
    <string name="dataNaix">Data de naixement</string>
    <string name="allergies">Al·lèrgies</string>
    <string name="dieta">Tipus de dieta</string>
    <string name="desc_ultimpas">Per garantir-te una millor experiència és necessari altres dades complementàries</string>
    <string name="dasc2_utimpas">En cas de ser necessari, podràs canviar aquestes dades a l\'apartat del teu perfil</string>
    <string name="btnIniciar">INICIAR</string>
    <string name="Resultats">Resultats</string>
    <string name="LesMevesReceptes">Les meves receptes</string>
    <string name="perfil">Perfil</string>
    <string name="Preferències">Preferències</string>
    <string name="nomusuari">Nom d\'usuari</string>
    <string name="dades">Dades</string>
</resources>