<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosafondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description_app"
        android:fontFamily="sans-serif-light"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnInvitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invitado"
        app:layout_constraintTop_toBottomOf="@id/textLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/rosaboton"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/textJaTens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuari"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/btnInvitado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/linkIniciarSessio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sessio"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/textJaTens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/textCrearCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compte"
        app:layout_constraintTop_toBottomOf="@id/linkIniciarSessio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/linkRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrat"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/textCrearCompte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>