<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscadorActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/draw_volver_foreground"
        android:contentDescription="@string/tornar_enrere"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/buscador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/buscador"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <EditText
        android:id="@+id/buscadorIngredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded"
        android:inputType=""
        android:padding="14dp"
        android:textStyle="bold"
        android:text="@string/escriu_ingredients"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/draw_buscar"
        app:layout_constraintTop_toBottomOf="@id/buscador"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/ingredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/ingredientes_seleccionados"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/buscadorIngredientes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"/>

    <Button
        android:id="@+id/buscarReceptes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/rosaboton"
        android:text="@string/buscar_receptes"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>